WPARAM and LPARAM are incorrectly defined for x64 https://bugs.webkit.org/show_bug.cgi?id=89902

Patch by Alex Christensen <alex.christensen@flexsim.com> on 2012-08-13
Reviewed by Brent Fulgham.

Include WindowsExtras.h for PLATFORM(WIN) to define WPARAM and LPARAM correctly
* platform/PlatformKeyboardEvent.h:
* platform/PlatformMouseEvent.h:
* platform/PlatformWheelEvent.h:
* platform/graphics/win/MediaPlayerPrivateFullscreenWindow.h:
* platform/win/WindowMessageListener.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@125506 bbb929c8-8fbe-4397-9dbb-9b2b20218538