third_party/WebKit/Source/WebCore/platform/graphics/win/MediaPlayerPrivateFullscreenWindow.h
@@ -27,18 +27,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef MediaPlayerPrivateFullscreenWindow_h
 #define MediaPlayerPrivateFullscreenWindow_h
 
+#if OS(WINDOWS)
+#include "WindowsExtras.h"
+#endif
 #include <wtf/RefPtr.h>
 
 #if USE(ACCELERATED_COMPOSITING)
 #include "CACFLayerTreeHostClient.h"
 #endif
-
-typedef unsigned WPARAM;
-typedef long LPARAM;
-typedef struct HWND__* HWND;
-typedef _W64 long LONG_PTR;
-typedef LONG_PTR LRESULT;
-typedef unsigned int UINT;
 
 namespace WebCore {
 
