third_party/WebKit/Source/WebCore/platform/win/WindowMessageListener.h
@@ -30,10 +30,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WindowMessageListener_h
 #define WindowMessageListener_h
 
-typedef struct HWND__* HWND;
-typedef long LPARAM;
-typedef unsigned UINT;
-typedef unsigned WPARAM;
+#if OS(WINDOWS)
+#include "WindowsExtras.h"
+#endif
 
 namespace WebCore {
 
